WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191256
Fix build with disabled DFG/FTL
https://bugs.webkit.org/show_bug.cgi?id=191256
Summary
Fix build with disabled DFG/FTL
Dominik Inführ
Reported
2018-11-05 03:32:24 PST
Fix build with disabled DFG/FTL[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[C
Attachments
Patch
(6.29 KB, patch)
2018-11-05 03:32 PST
,
Dominik Inführ
no flags
Details
Formatted Diff
Diff
Patch
(6.31 KB, patch)
2018-11-05 03:37 PST
,
Dominik Inführ
no flags
Details
Formatted Diff
Diff
Patch
(6.31 KB, patch)
2018-11-05 09:29 PST
,
Dominik Inführ
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dominik Inführ
Comment 1
2018-11-05 03:32:49 PST
Created
attachment 353845
[details]
Patch
Dominik Inführ
Comment 2
2018-11-05 03:37:15 PST
Created
attachment 353846
[details]
Patch
Guillaume Emont
Comment 3
2018-11-05 03:49:46 PST
Comment on
attachment 353846
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=353846&action=review
Did not try it yet, but the changes seem to make sense. One suggestion for improvement though: the implementation of GetByIdStatus::computeForStubInfoWithoutExitSiteFeedback() in bytecode/GetByIdStatus.cpp does not seem to be guarded by ENABLE(DFG_JIT) even though its definition in the .h is, so maybe we want to guard it too?
> Source/JavaScriptCore/bytecode/PutByIdStatus.cpp:-55 > -#if ENABLE(DFG_JIT) > -ExitFlag PutByIdStatus::hasExitSite(CodeBlock* profiledBlock, unsigned bytecodeIndex) > -{ > - return hasBadCacheExitSite(profiledBlock, bytecodeIndex); > -} > -#endif
Any idea why this function existed in the first place?
Dominik Inführ
Comment 4
2018-11-05 05:51:18 PST
After looking into the history, it seems that the function used to do more stuff.
Guillaume Emont
Comment 5
2018-11-05 09:28:51 PST
(In reply to Guillaume Emont from
comment #3
)
> One suggestion for improvement though: the implementation of > GetByIdStatus::computeForStubInfoWithoutExitSiteFeedback() in > bytecode/GetByIdStatus.cpp does not seem to be guarded by ENABLE(DFG_JIT) > even though its definition in the .h is, so maybe we want to guard it too?
Disregard that, I got mixed up between GetByIdStatus::computeForStubInfoWithoutExitSiteFeedback() and InByIdStatus::computeForStubInfoWithoutExitSiteFeedback().
Dominik Inführ
Comment 6
2018-11-05 09:29:16 PST
Created
attachment 353873
[details]
Patch
Dominik Inführ
Comment 7
2018-11-08 01:45:36 PST
ping review.
Yusuke Suzuki
Comment 8
2018-11-17 02:07:05 PST
Comment on
attachment 353873
[details]
Patch r=me
WebKit Commit Bot
Comment 9
2018-11-17 02:33:24 PST
Comment on
attachment 353873
[details]
Patch Clearing flags on attachment: 353873 Committed
r238346
: <
https://trac.webkit.org/changeset/238346
>
WebKit Commit Bot
Comment 10
2018-11-17 02:33:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug