Fix build with disabled DFG/FTL https://bugs.webkit.org/show_bug.cgi?id=191256

Reviewed by Yusuke Suzuki.

Fix compilation errors and warnings with both DFG and FTL
disabled at compile-time.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::getICStatusMap):
* bytecode/InByIdStatus.cpp:
(JSC::InByIdStatus::computeFor):
* bytecode/PutByIdStatus.cpp:
(JSC::PutByIdStatus::computeFor):
(JSC::PutByIdStatus::hasExitSite): Deleted.
* bytecode/PutByIdStatus.h:
* jit/JITOpcodes.cpp:
(JSC::JIT::emit_op_catch):


Canonical link: https://commits.webkit.org/206525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238346 268f45cc-cd09-0410-ab3c-d52691b4dbfc