Source/JavaScriptCore/bytecode/PutByIdStatus.h
@@ -125,9 +125,6 @@ public:
     void dump(PrintStream&) const;
     
 private:
-#if ENABLE(DFG_JIT)
-    static ExitFlag hasExitSite(CodeBlock*, unsigned bytecodeIndex);
-#endif
 #if ENABLE(JIT)
     static PutByIdStatus computeForStubInfo(
         const ConcurrentJSLocker&, CodeBlock*, StructureStubInfo*, UniquedStringImpl* uid,
